Add episodes page

--- a/episodes/001-lamest-superheroes.njk
+++ b/episodes/001-lamest-superheroes.njk
@@ -6,7 +6,7 @@ description: This week Brian and Melissa each invent ten lame superheroes with l
 date: 2016-06-02
 bytes: 13373066
 duration: '0:27:51'
-tags: ['superheroes']
+tags: ['episodes', 'superheroes']
 ---
 
 <h2>Melissa</h2>
