--- a/episodes/002-musicals.njk
+++ b/episodes/002-musicals.njk
@@ -6,7 +6,7 @@ description: Melissa and Brian each pick their top ten movie musicals.
 date: 2016-06-02
 bytes: 16643378
 duration: '0:34:40'
-tags: ['movies', 'musicals']
+tags: ['episodes', 'movies', 'musicals']
 ---
 
 <h2>Brian</h2>
