--- a/episodes/003-podcasts.njk
+++ b/episodes/003-podcasts.njk
@@ -6,7 +6,7 @@ description: Brian and Melissa talk through their top ten podcasts.
 date: 2016-06-17
 bytes: 17743238
 duration: '0:36:58'
-tags: ['podcasts']
+tags: ['episodes', 'podcasts']
 ---
 
 <h2>Melissa</h2>
