--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -17,7 +17,7 @@ site_url: 'tto.koser.us'
         <header>logo</header>
         <nav>
             <ol>
-                <li><a href="#">Episodes</a>
+                <li><a href="/episodes/">Episodes</a>
                 <li><a href="#">Subscribe</a>
                 <li><a href="#">About</a>
                 <li><a href="#">Latest</a>
