Add list shortcode

--- a/episodes/001-lamest-superheroes.njk
+++ b/episodes/001-lamest-superheroes.njk
@@ -7,32 +7,31 @@ date: 2016-06-02
 bytes: 13373066
 duration: '0:27:51'
 tags: ['episodes', 'superheroes']
+list_melissa: 
+  - "Colorgirl: can turn her nose any color"
+  - "Prettyboy: can mind-control his hair"
+  - "Sir No-See: turns invisible, but only when there is no light"
+  - "Sunbeam: uncontrollably shots lasers from eyes after slight sunburn"
+  - "Boing Boing: makes small rubber bouncy balls to attack with"
+  - "Glubglub: can breathe underwater, but only if it's purified drinking water"
+  - "The Dripper: superhearing, but only for leaky faucets"
+  - "Lady Llama: turns into a llama"
+  - "Pupmaster: can summon puppies to his location"
+  - "Grim Leaper: leaps tall buildings with single bound when scowling, needs parachute coming down"
+list_brian:
+  - "Pinpoint: Always know his exact location"
+  - "Manhole: He’s a hole"
+  - "Earonaut: Complete control over his ears"
+  - "Pants Eyes: Read anything by sitting on it"
+  - "The Thumper: Determine if anything is fresh by thumping on it"
+  - "Tubero: Sense potatoes"
+  - "Extension: Always gets an extra day for any deadline"
+  - "X-Hale: Blow indefinitely"
+  - "Overgeorge: Mind control people named “George”"
+  - "Payphone: Contact all pay phones mentally"
 ---
 
-<h2>Melissa</h2>
-<ol reversed>
-<li>Colorgirl: can turn her nose any color</li>
-<li>Prettyboy: can mind-control his hair</li>
-<li>Sir No-See: turns invisible, but only when there is no light</li>
-<li>Sunbeam: uncontrollably shots lasers from eyes after slight sunburn</li>
-<li>Boing Boing: makes small rubber bouncy balls to attack with</li>
-<li>Glubglub: can breathe underwater, but only if it's purified drinking water</li>
-<li>The Dripper: superhearing, but only for leaky faucets</li>
-<li>Lady Llama: turns into a llama</li>
-<li>Pupmaster: can summon puppies to his location</li>
-<li>Grim Leaper: leaps tall buildings with single bound when scowling, needs parachute coming down</li>
-</ol>
+{% list "Melissa", list_melissa %}
+{% list "Brian", list_brian %}
 
-<h2>Brian</h2>
-<ol reversed>
-<li>Pinpoint: Always know his exact location</li>
-<li>Manhole: He’s a hole</li>
-<li>Earonaut: Complete control over his ears</li>
-<li>Pants Eyes: Read anything by sitting on it</li>
-<li>The Thumper: Determine if anything is fresh by thumping on it</li>
-<li>Tubero: Sense potatoes</li>
-<li>Extension: Always gets an extra day for any deadline</li>
-<li>X-Hale: Blow indefinitely</li>
-<li>Overgeorge: Mind control people named “George”</li>
-<li>Payphone: Contact all pay phones mentally</li>
 </ol>
