Add link list shortcode

--- a/episodes/003-podcasts.njk
+++ b/episodes/003-podcasts.njk
@@ -4,38 +4,39 @@ number: 3
 title: Podcasts
 description: Brian and Melissa talk through their top ten podcasts.
 date: 2016-06-17
+hosts:
+  - Brian
+  - Melissa
 bytes: 17743238
 duration: '0:36:58'
 tags: ['episodes', 'podcasts']
+list_brian:
+  - {"title": "The Dice Steeple", "url": "http://www.dicesteeple.libsyn.com/"}
+  - {"title": "Not Another Philly Sports Talk Show", "url": "https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=4&cad=rja&uact=8&ved=0ahUKEwi2mrH6zbDNAhUEQSYKHaPxA2MQFgg1MAM&url=https%3A%2F%2Fitunes.apple.com%2Fus%2Fpodcast%2Fnot-another-philly-sports%2Fid498359591%3Fmt%3D2&usg=AFQjCNHH63MQq-6G_vpy_88asSM0isNzjg&sig2=O5EIdTn6GSeVAO1zGFEHzA"}
+  - {"title": "Ludology", "url": "http://www.ludology.libsyn.com/"}
+  - {"title": "Question of the Day", "url": "http://www.earwolf.com/show/question-of-the-day/"}
+  - {"title": "Common Sense", "url": "http://www.dancarlin.com/common-sense-home-landing-page/"}
+  - {"title": "Freakonomics", "url": "http://freakonomics.com/archive/"}
+  - {"title": "The Dice Tower", "url": "http://www.dicetower.com/game-podcast/dice-tower"}
+  - {"title": "Hardcore History", "url": "http://www.dancarlin.com/hardcore-history-series/"}
+  - {"title": "Flip the Table", "url": "https://tableflipsyou.blogspot.com/p/podcast.html"}
+  - {"title": "The Sci-Fi Christian", "url": "http://thescifichristian.com"}
+list_melissa:
+  - {"title": "The Dice Steeple", "url": "http://www.dicesteeple.libsyn.com/"}
+  - {"title": "Reasonable Faith", "url": "http://www.reasonablefaith.org/reasonable-faith-podcast/latest"}
+  - {"title": "Cold-Case Christianity", "url": "http://coldcasechristianity.com/category/podcasts/"}
+  - {"title": "Stuff You Missed in History Class", "url": "http://www.missedinhistory.com/podcasts/"}
+  - {"title": "Hardcore History", "url": "http://www.dancarlin.com/hardcore-history-series/"}
+  - {"title": "Freakonomics", "url": "http://freakonomics.com/archive/"}
+  - {"title": "Unbelievable?", "url": "http://www.premierchristianradio.com/Shows/Saturday/Unbelievable"}
+  - {"title": "Flip the Table", "url": "https://tableflipsyou.blogspot.com/p/podcast.html"}
+  - {"title": "Lore", "url": "http://www.lorepodcast.com/episodes/"}
+  - {"title": "The Sci-Fi Christian", "url": "http://thescifichristian.com"}
 ---
 
-<h2>Melissa</h2>
-<ol reversed>
-<li><a href="http://www.dicesteeple.libsyn.com/">The Dice Steeple</a></li>
-<li><a href="http://www.reasonablefaith.org/reasonable-faith-podcast/latest">Reasonable Faith</a></li>
-<li><a href="http://coldcasechristianity.com/category/podcasts/">Cold-Case Christianity</a></li>
-<li><a href="http://www.missedinhistory.com/podcasts/">Stuff You Missed in History Class</a></li>
-<li><a href="http://www.dancarlin.com/hardcore-history-series/">Hardcore History</a></li>
-<li><a href="http://freakonomics.com/archive/">Freakonomics</a></li>
-<li><a href="http://www.premierchristianradio.com/Shows/Saturday/Unbelievable">Unbelievable?</a></li>
-<li><a href="https://tableflipsyou.blogspot.com/p/podcast.html">Flip the Table</a></li>
-<li><a href="http://www.lorepodcast.com/episodes/">Lore</a></li>
-<li><a href="http://thescifichristian.com">The Sci-Fi Christian</a></li>
-</ol>
+{% linkList "Melissa", list_melissa %}
+{% linkList "Brian", list_brian %}
 
-<h2>Brian</h2>
-<ol reversed>
-<li><a href="http://www.dicesteeple.libsyn.com/">The Dice Steeple</a></li>
-<li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=4&cad=rja&uact=8&ved=0ahUKEwi2mrH6zbDNAhUEQSYKHaPxA2MQFgg1MAM&url=https%3A%2F%2Fitunes.apple.com%2Fus%2Fpodcast%2Fnot-another-philly-sports%2Fid498359591%3Fmt%3D2&usg=AFQjCNHH63MQq-6G_vpy_88asSM0isNzjg&sig2=O5EIdTn6GSeVAO1zGFEHzA">Not Another Philly Sports Talk Show</a></li>
-<li><a href="http://www.ludology.libsyn.com/">Ludology</a></li>
-<li><a href="http://www.earwolf.com/show/question-of-the-day/">Question of the Day</a></li>
-<li><a href="http://www.dancarlin.com/common-sense-home-landing-page/">Common Sense</a></li>
-<li><a href="http://freakonomics.com/archive/">Freakonomics</a></li>
-<li><a href="http://www.dicetower.com/game-podcast/dice-tower">The Dice Tower</a></li>
-<li><a href="http://www.dancarlin.com/hardcore-history-series/">Hardcore History</a></li>
-<li><a href="https://tableflipsyou.blogspot.com/p/podcast.html">Flip the Table</a></li>
-<li><a href="http://thescifichristian.com">The Sci-Fi Christian</a></li>
-</ol>
 
 <h2>Notes</h2>
 <ul>
