--- a/episodes/003-podcasts.njk
+++ b/episodes/003-podcasts.njk
@@ -32,14 +32,10 @@ list_melissa:
   - {"title": "Flip the Table", "url": "https://tableflipsyou.blogspot.com/p/podcast.html"}
   - {"title": "Lore", "url": "http://www.lorepodcast.com/episodes/"}
   - {"title": "The Sci-Fi Christian", "url": "http://thescifichristian.com"}
+notes:
+  - In addition to the reasons mentioned, Melissa also likes Lore because you learn the local history and legends of different places and cultures.
+  - Melissa also likes Unbelievable? because it makes you see opposing points of view and challenges you to defend your beliefs.
 ---
 
 {% linkList "Melissa", list_melissa %}
 {% linkList "Brian", list_brian %}
-
-
-<h2>Notes</h2>
-<ul>
-<li>In addition to the reasons mentioned, Melissa also likes Lore because you learn the local history and legends of different places and cultures.</li>
-<li>Melissa also likes Unbelievable? because it makes you see opposing points of view and challenges you to defend your beliefs.</li>
-</ul>
