Sort lists, list properties

--- a/episodes/001-lamest-superheroes.njk
+++ b/episodes/001-lamest-superheroes.njk
@@ -4,20 +4,12 @@ number: 1
 title: Lamest Superheroes
 description: This week Brian and Melissa each invent ten lame superheroes with lame superpowers. These characters would be right at home on The Tick or Mystery Men. 
 date: 2016-06-02
+hosts:
+  - Brian
+  - Melissa
 bytes: 13373066
 duration: '0:27:51'
 tags: ['episodes', 'superheroes']
-list_melissa: 
-  - "Colorgirl: can turn her nose any color"
-  - "Prettyboy: can mind-control his hair"
-  - "Sir No-See: turns invisible, but only when there is no light"
-  - "Sunbeam: uncontrollably shots lasers from eyes after slight sunburn"
-  - "Boing Boing: makes small rubber bouncy balls to attack with"
-  - "Glubglub: can breathe underwater, but only if it's purified drinking water"
-  - "The Dripper: superhearing, but only for leaky faucets"
-  - "Lady Llama: turns into a llama"
-  - "Pupmaster: can summon puppies to his location"
-  - "Grim Leaper: leaps tall buildings with single bound when scowling, needs parachute coming down"
 list_brian:
   - "Pinpoint: Always know his exact location"
   - "Manhole: He’s a hole"
@@ -29,9 +21,18 @@ list_brian:
   - "X-Hale: Blow indefinitely"
   - "Overgeorge: Mind control people named “George”"
   - "Payphone: Contact all pay phones mentally"
+list_melissa: 
+  - "Colorgirl: can turn her nose any color"
+  - "Prettyboy: can mind-control his hair"
+  - "Sir No-See: turns invisible, but only when there is no light"
+  - "Sunbeam: uncontrollably shots lasers from eyes after slight sunburn"
+  - "Boing Boing: makes small rubber bouncy balls to attack with"
+  - "Glubglub: can breathe underwater, but only if it's purified drinking water"
+  - "The Dripper: superhearing, but only for leaky faucets"
+  - "Lady Llama: turns into a llama"
+  - "Pupmaster: can summon puppies to his location"
+  - "Grim Leaper: leaps tall buildings with single bound when scowling, needs parachute coming down"
 ---
 
 {% list "Melissa", list_melissa %}
 {% list "Brian", list_brian %}
-
-</ol>
