--- a/episodes/002-musicals.njk
+++ b/episodes/002-musicals.njk
@@ -11,27 +11,27 @@ bytes: 16643378
 duration: '0:34:40'
 tags: ['episodes', 'movies', 'musicals']
 list_brian:
-  - {"slug": "seven-brides-for-seven-brothers", "title": "Seven Brides for Seven Brothers"}
-  - {"slug": "the-music-man", "title": "The Music Man"}
-  - {"slug": "singin-in-the-rain", "title": "Singin’ in the Rain"}
-  - {"slug": "yankee-doodle-dandy", "title": "Yankee Doodle Dandy"}
-  - {"slug": "the-sound-of-music", "title": "The Sound of Music"}
-  - {"slug": "in-the-good-old-summertime", "title": "In the Good Old Summertime"}
-  - {"slug": "mary-poppins", "title": "Mary Poppins"}
-  - {"slug": "the-phantom-of-the-opera-2004", "title": "The Phantom of the Opera"}
-  - {"slug": "muppet-treasure-island", "title": "Muppet Treasure Island"}
-  - {"slug": "fiddler-on-the-roof", "title": "Fiddler on the Roof"}
+  - {"title": "Seven Brides for Seven Brothers", "slug": "seven-brides-for-seven-brothers"}
+  - {"title": "The Music Man", "slug": "the-music-man"}
+  - {"title": "Singin’ in the Rain", "slug": "singin-in-the-rain"}
+  - {"title": "Yankee Doodle Dandy", "slug": "yankee-doodle-dandy"}
+  - {"title": "The Sound of Music", "slug": "the-sound-of-music"}
+  - {"title": "In the Good Old Summertime", "slug": "in-the-good-old-summertime"}
+  - {"title": "Mary Poppins", "slug": "mary-poppins"}
+  - {"title": "The Phantom of the Opera", "slug": "the-phantom-of-the-opera-2004"}
+  - {"title": "Muppet Treasure Island", "slug": "muppet-treasure-island"}
+  - {"title": "Fiddler on the Roof", "slug": "fiddler-on-the-roof"}
 list_melissa: 
-  - {"slug": "hello-dolly", "title": "Hello, Dolly!", "replaced": "How the Grinch Stole Christmas"}
-  - {"slug": "road-to-utopia", "title": "Road to Utopia"}
-  - {"slug": "state-fair", "title": "State Fair"}
-  - {"slug": "seven-brides-for-seven-brothers", "title": "Seven Brides for Seven Brothers"}
-  - {"slug": "the-music-man", "title": "The Music Man"}
-  - {"slug": "my-fair-lady", "title": "My Fair Lady"}
-  - {"slug": "dr-horribles-sing-along-blog-2008", "title": "Dr. Horrible’s Sing-Along Blog"}
-  - {"slug": "the-phantom-of-the-opera-2004", "title": "The Phantom of the Opera"}
-  - {"slug": "fiddler-on-the-roof", "title": "Fiddler on the Roof"}
-  - {"slug": "scrooge-1970", "title": "Scrooge"}
+  - {"title": "Hello, Dolly!", "slug": "hello-dolly", "replaced": "How the Grinch Stole Christmas"}
+  - {"title": "Road to Utopia", "slug": "road-to-utopia"}
+  - {"title": "State Fair", "slug": "state-fair"}
+  - {"title": "Seven Brides for Seven Brothers", "slug": "seven-brides-for-seven-brothers"}
+  - {"title": "The Music Man", "slug": "the-music-man"}
+  - {"title": "My Fair Lady", "slug": "my-fair-lady"}
+  - {"title": "Dr. Horrible’s Sing-Along Blog", "slug": "dr-horribles-sing-along-blog-2008"}
+  - {"title": "The Phantom of the Opera", "slug": "the-phantom-of-the-opera-2004"}
+  - {"title": "Fiddler on the Roof", "slug": "fiddler-on-the-roof"}
+  - {"title": "Scrooge", "slug": "scrooge-1970"}
 ---
 
 {% movieList "Brian", list_brian %}
