--- a/episodes/index.njk
+++ b/episodes/index.njk
@@ -2,7 +2,7 @@
 layout: base
 ---
 <h1>Episodes</h1>
-{% for episode in collections.episodes | reverse %}
+{%- for episode in collections.episodes | reverse -%}
     <a href="{{ episode.url }}">№ {{ episode.data.number }} {{ episode.data.title }}</a>
     {{ episode.date }}
-{% endfor %}
+{%- endfor -%}
