Add subscribe page

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -12,7 +12,7 @@
         <nav>
             <ol>
                 <li><a href="/episodes/">Episodes</a>
-                <li><a href="#">Subscribe</a>
+                <li><a href="/subscribe/">Subscribe</a>
                 <li><a href="#">About</a>
                 <li><a href="#">Latest</a>
                 <li><a href="#">Recommended</a>
@@ -28,5 +28,6 @@
                 <li>[icon] Logo by Matt Koser
             </ol>
         </footer>
+        <script src="/js/site.js"></script>
     </body>
 </html>
