--- a/index.njk
+++ b/index.njk
@@ -16,6 +16,13 @@ layout: base
     </div> #}
 </div>
 
+{# About section
+
+Bios: blurb, favorite episode, link to koser.us posts
+
+Mobile: full screen picture of each host saturated to hosts color, bio overlaid
+Desktop: same, but left side is Melissa, right half is Brian #}
+
 {# <div class="section">
     <h2>Blog</h2>
     blog post card - latest
