Finish rss feed; add date, tags filters

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>{% if number != null %}№ {{ number}} {% endif %} {% if title != null %}{{ title }} ·{% endif %} {{metadata.site_name}}</title>
+        <title>{% if number != null %}№ {{ number}} {% endif %} {% if title != null %}{{ title }} ·{% endif %} {{metadata.podcast_name}}</title>
         <meta name="description" content="The home page for Ten to One, the podcast where Melissa and Brian Koser make top ten lists about everything.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
