--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -13,10 +13,9 @@
             <ol>
                 <li><a href="/episodes/">Episodes</a>
                 <li><a href="/subscribe/">Subscribe</a>
-                <li><a href="#">About</a>
                 <li><a href="#">Latest</a>
                 <li><a href="#">Recommended</a>
-                <li><a href="#">RSS</a> · <a href="mailto:tto@koser.us">tto@koser.us</a>
+                <li><a href="/feed.rss">RSS</a> · <a href="mailto:tto@koser.us">tto@koser.us</a>
         </nav>
         <main>
             {{ content | safe }}
