Use CDN metadata

--- a/subscribe.njk
+++ b/subscribe.njk
@@ -25,37 +25,37 @@ layout: base
 
         <li>Tap the <kbd><samp>Add new Podcast</samp></kbd> button.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-01.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-01.png">
 
         <li>Tap the <kbd><samp>Search Engine</samp></kbd> tile.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-02.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-02.png">
 
         <li>Search for <b>Ten to One</b>.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-03.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-03.png">
 
         <li>Tap the <kbd><samp>Subscribe</samp></kbd> button.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-04.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-04.png">
 
         <li>Tap the menu icon. Then tap <kbd><samp>Update</samp></kbd>, <kbd><samp>Automatic refresh</samp></kbd>, <kbd><samp>Enable Podcasts automatic refresh</samp></kbd>.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-05.png">
-        <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-06.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-05.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-06.png">
 
         <li>Tap the <b>back button</b> to go back to Settings. Then tap <kbd><samp>Download</samp></kbd>, <kbd><samp>Automatic download</samp></kbd>. Now, whenever we release a new episode, it will automatically download to your phone.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-07.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-07.png">
 
         <li>You will get a notification when an episode has downloaded. Tap the notification to see the new episode. Or, open the app and tap on the Ten to One tile.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-08.png">
-        <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-09.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-08.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-09.png">
 
         <li>Tap the <b>Play</b> button to play the episode. If the episode has not downloaded, a Download button will be in place of the Play button. Tap <b>Download</b> to download the episode.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-10.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-android-podcast-addict-10.png">
 
         <li>Enjoy the podcast!
     </ol>
@@ -68,27 +68,27 @@ layout: base
     <ol>
         <li>Open the <b>Podcasts</b> app on your iPhone or iPad.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-apple-1.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-apple-1.png">
 
         <li>Tap the <kbd><samp>Search</samp></kbd> button in the bottom menu.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-apple-2.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-apple-2.png">
 
         <li>Search for <b>Ten to One</b>.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-apple-3.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-apple-3.png">
 
         <li>Find and tap on the Ten to One podcast (you might have to scroll down).
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-apple-4.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-apple-4.png">
 
         <li>Tap the <kbd><samp>Subscribe</samp></kbd> button.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-apple-5.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-apple-5.png">
 
         <li>Tap the <kbd><samp>My Podcasts</samp></kbd> button. Then tap on any episode to download and listen.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-apple-6.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-apple-6.png">
 
         <li>A new episode will be downloaded every two weeks.
 
@@ -105,19 +105,19 @@ layout: base
     	
         <li>Open iTunes and click <kbd><samp>File</samp></kbd>, then <kbd><samp>Subscribe to Podcast</samp></kbd>.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-windows-itunes-1.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-windows-itunes-1.png">
 
         <li>Enter our URL: <b>http://tto.koser.us/feed.rss</b> and click <kbd><samp>OK</samp></kbd>.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-windows-itunes-2.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-windows-itunes-2.png">
 
         <li>You do not need to sync, but you should select <kbd><samp>Automatically download new episodes for your subscriptions</samp></kbd>, then click <kbd><samp>Continue</samp></kbd>.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-windows-itunes-3.png">
+        <img src="{{metadata.cdn_url}}/img/subscribe-windows-itunes-3.png">
 
         <li>Listen to an episode by double-clicking it.
         <br>
-        <img src="http://ttocdn.koser.us/img/subscribe-windows-itunes-4.png">    
+        <img src="{{metadata.cdn_url}}/img/subscribe-windows-itunes-4.png">    
         
         <li>To listen to our new episodes, just open iTunes. Any new episodes will be automatically downloaded.
 
