Add kodex base CSS, fonts

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,6 +6,8 @@
         <title>{% if number != null %}№ {{ number}} {% endif %} {% if title != null %}{{ title }} ·{% endif %} {{metadata.podcast_name}}</title>
         <meta name="description" content="The home page for Ten to One, the podcast where Melissa and Brian Koser make top ten lists about everything.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/css/modern-normalize.css" />
+        <link rel="stylesheet" href="/css/site.css" />
     </head>
     <body>
         <header>logo</header>
