--- a/css/site.css
+++ b/css/site.css
@@ -3,64 +3,64 @@
 */
 @font-face {
     font-family: ConcourseBlack;
-    src: url("/fonts/concourse/concourse_t8_regular.woff2") format("woff2"), url("/fonts/concourse/concourse_t8_regular.woff") format("woff"); }
+    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t8_regular.woff2") format("woff2"), url("/fonts/concourse/concourse_t8_regular.woff") format("woff"); }
 
 @font-face {
     font-family: ConcourseLight;
-    src: url("/fonts/concourse/concourse_t2_regular.woff2") format("woff2"), url("/fonts/concourse/concourse_t2_regular.woff") format("woff"); }
+    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_regular.woff2") format("woff2"), url("/fonts/concourse/concourse_t2_regular.woff") format("woff"); }
 
 @font-face {
     font-family: ConcourseLight;
-    src: url("/fonts/concourse/concourse_t2_italic.woff2") format("woff2"), url("/fonts/concourse/concourse_t2_italic.woff") format("woff");
+    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_italic.woff2") format("woff2"), url("/fonts/concourse/concourse_t2_italic.woff") format("woff");
     font-style: italic; }
 
 @font-face {
     font-family: Concourse;
-    src: url("/fonts/concourse/concourse_t4_regular.woff2") format("woff2"), url("/fonts/concourse/concourse_t4_regular.woff") format("woff"); }
+    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_regular.woff2") format("woff2"), url("/fonts/concourse/concourse_t4_regular.woff") format("woff"); }
 
 @font-face {
     font-family: Concourse;
-    src: url("/fonts/concourse/concourse_t4_bold.woff2") format("woff2"), url("/fonts/concourse/concourse_t4_bold.woff") format("woff");
+    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_bold.woff2") format("woff2"), url("/fonts/concourse/concourse_t4_bold.woff") format("woff");
     font-weight: 700; }
 
 @font-face {
     font-family: Concourse;
-    src: url("/fonts/concourse/concourse_t4_italic.woff2") format("woff2"), url("/fonts/concourse/concourse_t4_italic.woff") format("woff");
+    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_italic.woff2") format("woff2"), url("/fonts/concourse/concourse_t4_italic.woff") format("woff");
     font-style: italic; }
 
 @font-face {
     font-family: Concourse;
-    src: url("/fonts/concourse/concourse_t4_bold_italic.woff2") format("woff2"), url("/fonts/concourse/concourse_t4_bold_italic.woff") format("woff");
+    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_bold_italic.woff2") format("woff2"), url("/fonts/concourse/concourse_t4_bold_italic.woff") format("woff");
     font-weight: 700;
     font-style: italic; }
 
 @font-face {
     font-family: OpenSansNumero;
-    src: url("/fonts/OpenSansRegularNumero.woff2") format("woff2"), url("/fonts/OpenSansRegularNumero.woff") format("woff"); }
+    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansRegularNumero.woff2") format("woff2"), url("/fonts/OpenSansRegularNumero.woff") format("woff"); }
 
 @font-face {
     font-family: OpenSansNumero;
-    src: url("/fonts/OpenSansBoldNumero.woff2") format("woff2"), url("/fonts/OpenSansBoldNumero.woff") format("woff");
+    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansBoldNumero.woff2") format("woff2"), url("/fonts/OpenSansBoldNumero.woff") format("woff");
     font-weight: 700; }
 
 @font-face {
     font-family: OpenSansNumero;
-    src: url("/fonts/OpenSansItalicNumero.woff2") format("woff2"), url("/fonts/OpenSansItalicNumero.woff") format("woff");
+    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansItalicNumero.woff2") format("woff2"), url("/fonts/OpenSansItalicNumero.woff") format("woff");
     font-style: italic; }
 
 @font-face {
     font-family: OpenSansNumero;
-    src: url("/fonts/OpenSansBoldItalicNumero.woff2") format("woff2"), url("/fonts/OpenSansBoldItalicNumero.woff") format("woff");
+    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansBoldItalicNumero.woff2") format("woff2"), url("/fonts/OpenSansBoldItalicNumero.woff") format("woff");
     font-weight: 700;
     font-style: italic; }
 
 @font-face {
     font-family: OpenSansLightNumero;
-    src: url("/fonts/OpenSansLightNumero.woff2") format("woff2"), url("/fonts/OpenSansLightNumero.woff") format("woff"); }
+    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightNumero.woff2") format("woff2"), url("/fonts/OpenSansLightNumero.woff") format("woff"); }
 
 @font-face {
     font-family: OpenSansLightNumero;
-    src: url("/fonts/OpenSansLightItalicNumero.woff2") format("woff2"), url("/fonts/OpenSansLightItalicNumero.woff") format("woff");
+    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightItalicNumero.woff2") format("woff2"), url("/fonts/OpenSansLightItalicNumero.woff") format("woff");
     font-style: italic; }
 
 
