--- a/css/site.css
+++ b/css/site.css
@@ -3,65 +3,115 @@
 */
 @font-face {
     font-family: ConcourseBlack;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t8_regular.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t8_regular.woff") format("woff"); }
+    src:
+        local("Concourse T8"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t8_regular.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t8_regular.woff") format("woff"); 
+}
 
 @font-face {
     font-family: ConcourseLight;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_regular.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_regular.woff") format("woff"); }
+    src:
+        local("Concourse T2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_regular.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_regular.woff") format("woff"); 
+}
 
 @font-face {
     font-family: ConcourseLight;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_italic.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_italic.woff") format("woff");
-    font-style: italic; }
+    src:
+        local("Concourse T2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_italic.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t2_italic.woff") format("woff");
+    font-style: italic; 
+}
 
 @font-face {
     font-family: Concourse;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_regular.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_regular.woff") format("woff"); }
+    src:
+        local("Concourse T4"),
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_regular.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_regular.woff") format("woff"); 
+}
 
 @font-face {
     font-family: Concourse;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_bold.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_bold.woff") format("woff");
-    font-weight: 700; }
+    src:
+        local("Concourse T4"),
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_bold.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_bold.woff") format("woff");
+    font-weight: 700; 
+}
 
 @font-face {
     font-family: Concourse;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_italic.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_italic.woff") format("woff");
-    font-style: italic; }
+    src:
+        local("Concourse T4"),
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_italic.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_italic.woff") format("woff");
+    font-style: italic; 
+}
 
 @font-face {
     font-family: Concourse;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_bold_italic.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_bold_italic.woff") format("woff");
+    src:
+        local("Concourse T4"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_bold_italic.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/concourse/concourse_t4_bold_italic.woff") format("woff");
     font-weight: 700;
-    font-style: italic; }
+    font-style: italic; 
+}
 
 @font-face {
     font-family: OpenSansNumero;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansRegularNumero.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/OpenSansRegularNumero.woff") format("woff"); }
+    src:
+        local("Open Sans"),
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansRegularNumero.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansRegularNumero.woff") format("woff"); 
+}
 
 @font-face {
     font-family: OpenSansNumero;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansBoldNumero.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/OpenSansBoldNumero.woff") format("woff");
-    font-weight: 700; }
+    src: 
+        local("Open Sans"),
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansBoldNumero.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansBoldNumero.woff") format("woff");
+    font-weight: 700; 
+}
 
 @font-face {
     font-family: OpenSansNumero;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansItalicNumero.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/OpenSansItalicNumero.woff") format("woff");
-    font-style: italic; }
+    src: 
+        local("Open Sans"),
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansItalicNumero.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansItalicNumero.woff") format("woff");
+    font-style: italic; 
+}
 
 @font-face {
     font-family: OpenSansNumero;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansBoldItalicNumero.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/OpenSansBoldItalicNumero.woff") format("woff");
+    src: 
+        local("Open Sans"),
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansBoldItalicNumero.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansBoldItalicNumero.woff") format("woff");
     font-weight: 700;
-    font-style: italic; }
+    font-style: italic; 
+}
 
 @font-face {
     font-family: OpenSansLightNumero;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightNumero.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightNumero.woff") format("woff"); }
+    src: 
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightNumero.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightNumero.woff") format("woff"); 
+}
 
 @font-face {
     font-family: OpenSansLightNumero;
-    src: url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightItalicNumero.woff2") format("woff2"), url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightItalicNumero.woff") format("woff");
-    font-style: italic; }
+    src: 
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightItalicNumero.woff2") format("woff2"), 
+        url("https://s3.amazonaws.com/fonts.koser.us/OpenSansLightItalicNumero.woff") format("woff");
+    font-style: italic; 
+}
 
 
 
