Add microformats (fixes #6)

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -24,9 +24,9 @@
         </main>
         <footer>
             <ol>
-                <li>[icon] Podcast by Melissa and Brian Koser
-                <li>[icon] Website by Brian Koser
-                <li>[icon] Logo by Matt Koser
+                <li>[icon] Podcast by <a class="h-card" href="http://koser.us/melissa">Melissa</a> and <a class="h-card" href="http://koser.us/brian">Brian Koser</a>
+                <li>[icon] Website by <a class="h-card" href="http://koser.us/brian">Brian Koser</a>
+                <li>[icon] Logo by <a class="h-card" href="">Matt Koser</a>
             </ol>
         </footer>
         <script src="/js/site.js"></script>
