--- a/episodes/index.njk
+++ b/episodes/index.njk
@@ -3,6 +3,8 @@ layout: base
 ---
 <h1>Episodes</h1>
 {%- for episode in collections.episodes | reverse -%}
-    <a href="{{ episode.url }}">№ {{ episode.data.number }} {{ episode.data.title }}</a>
-    {{ episode.date }}
+    <div class="h-entry">
+        <a href="{{ episode.url }}" class="p-name">№ {{ episode.data.number }} {{ episode.data.title }}</a>
+        <time class="dt-published" datetime='{{ episode.date }}'>{{ episode.date | readableDate }}</time>
+    </div>
 {%- endfor -%}
